Refinements to player presence layout - team name size reduced slightly. Fixed a bug that resulted in misalignment of the status light when a player's sponsor's image was undersized. (#69)

--- a/projects/gameboard-ui/src/app/game/player-presence/player-presence.component.scss
+++ b/projects/gameboard-ui/src/app/game/player-presence/player-presence.component.scss
@@ -2,7 +2,7 @@
     display: flex;
 
     .light-spacer {
-        flex-grow: 1;
+        flex: 1 1 auto;
     }
 
     app-game-hub-status {
@@ -12,4 +12,10 @@
         right: 2rem;
         top: 0.4rem;
     }
+}
+
+.avatar {
+    width: 48px;
+    height: 48px;
+    object-fit: contain;
 }
