--- a/projects/gameboard-ui/src/app/game/player-session/player-session.component.scss
+++ b/projects/gameboard-ui/src/app/game/player-session/player-session.component.scss
@@ -22,9 +22,8 @@
 
 .team-leader-sponsor-logo {
   display: block;
-  min-width: 6rem;
-  object-fit: scale-down;
-  // min-height: 6rem;
+  object-fit: contain;
+  width: 48px;
   aspect-ratio: 1 / 1;
 }
 
@@ -34,8 +33,8 @@
 
 .team-leader-name-text {
   text-transform: lowercase;
-  font-size: 3rem;
-  line-height: 2.5rem;
+  font-size: 2.5rem;
+  line-height: 2rem;
   margin: 0;
   padding: 0;
 }
@@ -45,7 +44,7 @@ hr.team-leader-divider {
 }
 
 .team-header {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: bold;
   color: #aaaaaa;
   text-transform: uppercase;
